Add CSS tweak, Add Comment list lenth chooser

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,10 +1,14 @@
-#content {
+.content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 50vw;
 }
 
-#fact-container {
+header {
+  text-align: center;
+}
+
+.fact-container {
   margin-top: 20px;
 }
 
